# exista-ups-manager

./: Cargo.toml  algorithm.drawio  class_diagram.drawio  rust-exista.service
exista/: Cargo.toml
exista/src/: main.rs
exista_lib/: Cargo.toml
exista_lib/src/: lib.rs
exista_lib/src/application/: constants.rs  loger.rs  mod.rs
exista_lib/src/application/constants/: cube_serial_num.rs
exista_lib/src/json_patterns/: mod.rs  patterns.json
exista_lib/src/modbus/: com_status.rs  mod.rs  msg.rs  services.rs
exista_lib/src/mqtt/: callback.rs  callbacks.rs  mod.rs  msg.rs
exista_lib/src/mqtt/callback/: msg.rs
exista_lib/src/mqtt/callbacks/: msg.rs
exista_lib/src/requests/: battery_event.rs  battery_info.rs  mod.rs  requests_stack.rs  ups_info.rs
exista_lib/src/requests/battery_event/: map.rs
