[workspace]
members = [
    "exista",
    "exista_lib"
]



#[profile.release]
#opt-level = 3
#debug = false
#strip = "symbols"        # strip all debug info from binary. default is absent
#debug-assertions = false # disable runtime validation
#overflow-checks = true   # enable integer owerflow-checks. default false
#lto = true               # perform all optimizations in dependency tree. default false
#panic = "unwind"
#incremental = false
#codegen-units = 16
#rpath = false


