[package]
name = "exista_lib"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
serial = "0.4.0"
chrono = "0.4.23"
paho-mqtt = "0.12.0"
openssl-sys = "0.9.80"
openssl = { version = "0.10", features = ["vendored"] }
itertools = "0.10.5"
json = "*"
once_cell = "1.17.1"
std-semaphore = "0.1.0"
log = "0.4.17"